--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,83 @@
 
  @font-face {
    font-family: 'Market_Deco';
-   src:url(font-path('icomoon.ttf')) format('truetype');
+   src:url('Market_Deco.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
+ }
+
+ #signups {
+   float: right;
+ }
+
+ .quench {
+   text-decoration: none;
+   text-align: center;
+ }
+
+ body {
+   font-family: 'Market_Deco', sans-serif;
+   text-decoration: none;
+ }
+
+ h1 {
+   font-family: 'Market_Deco', sans-serif;
+   font-size: 80px;
+   background: -webkit-linear-gradient(50deg, #FFFACD, #FFB4CC 70%, #FFFACD);
+   -webkit-text-fill-color: transparent;
+   -webkit-background-clip: text;
+   text-align: center;
+   margin-bottom: 10px;
+ }
+
+ @font-face {
+   font-family: 'Market_Deco';
+   src:url('Market_Deco.ttf') format('truetype');
+   font-weight: normal;
+   font-style: normal;
+ }
+
+ p {
+   text-align: center;
+   font-family: 'Market_Deco', sans-serif;
+ }
+
+ ul {
+     font-family: 'Market_Deco', sans-serif;
+     list-style-type: none;
+     margin: 0;
+     padding: 0;
+     overflow: hidden;
+     background: -webkit-linear-gradient(50deg, #A0F1FF, #A0F1FF 70%, #A0F1FF);
+ }
+
+ li {
+     float: left;
+ }
+
+ li a {
+     display: block;
+     color: white;
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none;
+ }
+
+ a:hover:not(.active) {
+     background-color: #white;
+ }
+
+ .active {
+   background: -webkit-linear-gradient(50deg, #FFFACD, #FFB4CC 70%, #FFFACD);
+   -webkit-text-fill-color: transparent;
+   -webkit-background-clip: text;
+ }
+
+ .subnav {
+   text-align: center;
+   background: -webkit-linear-gradient(50deg, #AFEEEE, #AFEEEE 70%, #AFEEEE);
+ }
+
+ .footer {
+   text-align: center;
  }
