--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,105 +4,25 @@
   <li><a href="#about">About</a></li>
   <li><a href="#support">Support</a></li>
   <div id="signups">
-    <li><a href="#signup">Sign Up</a></li>
+    <li><%= link_to "Sign Up", new_user_session_path %></li>
     <% if user_signed_in? %>
       <li><%= link_to "Log Out", destroy_user_session_path, method: 'delete' %></li>
     <% else %>
       <li><%= link_to "Sign In", new_user_session_path %></li>
     <% end %>
+    <input type="text" name="search" placeholder="Search">
   <div>
 </ul>
 
 <ul class="subnav">
     <li><a href="#popular">Popular</a></li>
     <li><a href="#vote">Vote</a></li>
-    <p class="quench"><%= link_to "Upload, Quench Your Thirst", new_post_path, class: 'css_class', style: 'text-decoration: none' %></p>
-</ul>
 
+</ul>
+<p class="quench"><%= link_to "Upload", new_post_path, class: 'css_class', style: 'text-decoration: none' %></p>
 <h1>#WATERLUST</h1>
 
 <% @posts.each do |post| %>
   <%= link_to image_tag(post.image.url :small), post_path(post) %>
   <h2><%= link_to post.title, post_path(post) %></h2>
 <% end %>
-
-<style>
-#signups {
-  float: right;
-}
-
-.quench {
-  text-decoration: none;
-  float: left;
-  dislay: inline-block;
-  margin-left: 275px;
-}
-
-body {
-  font-family: 'Market_Deco', sans-serif;
-  text-decoration: none;
-}
-
-h1 {
-  font-family: 'Market_Deco', sans-serif;
-  font-size: 70px;
-  background: -webkit-linear-gradient(50deg, #FFFACD, #FFB4CC 70%, #FFFACD);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-@font-face {
-  font-family: 'Market_Deco';
-  src:url('Market_Deco.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-p {
-  text-align: center;
-  font-family: 'Market_Deco', sans-serif;
-}
-
-ul {
-    font-family: 'Market_Deco', sans-serif;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background: -webkit-linear-gradient(50deg, #A0F1FF, #A0F1FF 70%, #A0F1FF);
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-a:hover:not(.active) {
-    background-color: #white;
-}
-
-.active {
-  background: -webkit-linear-gradient(50deg, #FFFACD, #FFB4CC 70%, #FFFACD);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-}
-
-.subnav {
-  text-align: center;
-  background: -webkit-linear-gradient(50deg, #AFEEEE, #AFEEEE 70%, #AFEEEE);
-}
-
-.footer {
-  text-align: center;
-}
-</style>
